--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "^22.4.1"
+    "@types/node": "^22.4.1",
+    "prettier": "^3.3.3"
   }
 }
